# hlogger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/hlogger/: __init__.py  api.py  hlogger.py
tests/: test_api.py  test_hlogger.py
