[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hlogger"
description = "A logger utility for python application"
version = "1.3.1"
authors = [
  { name="llChameleoNll", email="chameleon2318@gmail.com" },
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["logging", "logger"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/sChameleoNz/hlogger"
Issues = "https://github.com/sChameleoNz/hlogger/issues"
"Buy me a coffee" = "https://www.buymeacoffee.com/llhoyall"
